viikon kaksi päivitys

--- a/work/mechlab/mechlab/web/html-demo/main_1.html
+++ b/work/mechlab/mechlab/web/html-demo/main_1.html
@@ -14,8 +14,8 @@
           <nav class="navbar navbar-inverse" role="navigation">
   <ul class="nav nav-tabs">
     <li class="active"><a href="#">MechLab.SELAA</a></li>
-    <li><a href="#">MechLab.RAKENNA</a></li>
-    <li><a href="#">Admin.YLLÄPITO</a></li>
+    <li><a href="main_1_1.html">MechLab.RAKENNA</a></li>
+    <li><a href="main_1_1_2.html">Admin.YLLÄPITO</a></li>
     <li><a href="#">Käyttäjä.ASETUKSET</a></li>
     <li><a href="#">Käyttäjä.POISTU</a></li>
   </ul>
