--- a/work/mechlab/mechlab/web/html-demo/main.html
+++ b/work/mechlab/mechlab/web/html-demo/main.html
@@ -14,8 +14,8 @@
           <nav class="navbar navbar-inverse" role="navigation">
   <ul class="nav nav-tabs">
     <li class="active"><a href="#">MechLab.SELAA</a></li>
-    <li><a href="#">MechLab.RAKENNA</a></li>
-    <li><a href="#">Admin.YLLÄPITO</a></li>
+    <li><a href="main_1_1.html">MechLab.RAKENNA</a></li>
+    <li><a href="main_1_1_2.html">Admin.YLLÄPITO</a></li>
     <li><a href="#">Käyttäjä.ASETUKSET</a></li>
     <li><a href="#">Käyttäjä.POISTU</a></li>
   </ul>
@@ -53,7 +53,7 @@
           <td>4</td><td>Rifleman</td><td>65 t</td><td>60 kph</td><td>0</td><td>192</td><td>25</td><td>12</td><td>80000 CR</td><td>Berner</td><td>INFO</td><td>DEL</td>
       </tr>
       <tr>
-          <td>5</td><td>Archer</td><td>70 t</td><td>60 kph</td><td>4</td><td>208</td><td>45</td><td>18</td><td>95000 CR</td><td>Berner</td><td>INFO</td><td>DEL</td>
+          <td>5</td><td><a href="main_1.html">Archer</a></td><td>70 t</td><td>60 kph</td><td>4</td><td>208</td><td>45</td><td>18</td><td>95000 CR</td><td>Berner</td><td>INFO</td><td>DEL</td>
       </tr>
       <tr>
           <td>6</td><td>Marauder</td><td>75 t</td><td>60 kph</td><td>0</td><td>240</td><td>40</td><td>20</td><td>155000 CR</td><td>Dieter</td><td>INFO</td><td>DEL</td>
